--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
+    "@mui/material": "^6.1.2",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.11.1",
     "mockuptest": "file:",
     "next": "14.2.14",
